# GFDL_atmos_cubed_sphere

./: Makefile.am  configure.ac
driver/GFDL/: Makefile.am
model/: Makefile.am  dyn_core.F90
tools/: Makefile.am  external_ic.F90  fv_diagnostics.F90  fv_nudge.F90
